<resources>
    <string name="app_name">TimeTable</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="title_activity_login">LoginActivity</string>
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="welcome">"Welcome !"</string>
    <string name="invalid_username">Not a valid username</string>
    <string name="invalid_password">Password must be >5 characters</string>
    <string name="login_failed">"Login failed"</string>
    <string name="today">Today</string>
    <string name="weekend_plan">Weekend Plan</string>
    <string name="profile">Profile</string>
    <string name="leetcode">LEETCODE</string>
    <string name="_0">0</string>
    <string name="gfg">GFG</string>
    <string name="github">GITHUB</string>
    <string name="codechef">Codechef</string>
    <string name="gfg2">GFG2</string>
    <string name="github2">GITHUB2</string>
    <string name="login_with_email">Login with Email</string>
    <string name="login_with_provided_credentials">Login with provided credentials</string>
    <string name="enter_email">Enter Email</string>
    <string name="enter_password">Enter Password</string>
    <string name="login">Login</string>
    <string name="this_week">This Week</string>
    <string name="codechef2">codechef2</string>
    <string name="hide_bottom_view_on_scroll_behavior" />
</resources>