<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:orientation="vertical"
    android:layout_height="match_parent"
    android:background="@color/light_cyan"
    tools:context=".MainActivity">

    <com.airbnb.lottie.LottieAnimationView
        android:layout_width="400dp"
        android:layout_height="400dp"
        android:layout_marginBottom="200dp"
        android:id="@+id/login_gif"
        app:lottie_rawRes="@raw/card"
        app:lottie_loop="true"
        app:lottie_autoPlay="true" />


    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_below="@+id/login_gif">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <TextView

                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="36dp"
                android:gravity="center|start"
                android:paddingLeft="20dp"
                android:text="@string/login_with_email"
                android:textColor="@color/black"
                android:textSize="25sp" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="3dp"
                android:gravity="center|start"
                android:layout_marginStart="20dp"
                android:text="@string/login_with_provided_credentials"
                android:textColor="#000000"
                android:textSize="12sp" />

            <com.google.android.material.textfield.TextInputLayout
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.Dense"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="20dp"
                android:layout_marginTop="30dp"
                android:layout_marginRight="20dp"
                android:hint="@string/enter_email"
                app:boxCornerRadiusBottomEnd="7dp"
                app:boxCornerRadiusBottomStart="7dp"
                app:boxCornerRadiusTopEnd="7dp"
                app:boxCornerRadiusTopStart="7dp"
                app:boxStrokeColor="@color/main_blue"
                app:hintTextColor="@color/main_blue">


                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/edt_log_email"
                    android:layout_width="match_parent"
                    android:background="@color/white"
                    android:layout_height="48dp"
                    android:inputType="textEmailAddress"
                    android:maxLength="50"
                    android:textColor="@color/black" />
            </com.google.android.material.textfield.TextInputLayout>


            <com.google.android.material.textfield.TextInputLayout
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.Dense"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="20dp"
                android:layout_marginTop="10dp"
                android:layout_marginRight="20dp"
                android:hint="@string/enter_password"
                app:boxCornerRadiusBottomEnd="7dp"
                app:boxCornerRadiusBottomStart="7dp"
                app:boxCornerRadiusTopEnd="7dp"
                app:boxCornerRadiusTopStart="7dp"
                app:boxStrokeColor="@color/main_blue"
                app:endIconMode="password_toggle"
                app:hintTextColor="@color/main_blue">


                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/edt_Log_password"
                    android:layout_width="match_parent"
                    android:background="@color/white"
                    android:layout_height="wrap_content"
                    android:inputType="textPassword"
                    android:maxLength="50"
                    android:textColor="@color/black" />
            </com.google.android.material.textfield.TextInputLayout>


        </LinearLayout>
    </ScrollView>



        <Button
            android:id="@+id/lhn_btn"
            android:layout_alignParentBottom="true"
            android:layout_centerInParent="true"
            android:layout_width="match_parent"
            android:layout_height="60dp"
            android:backgroundTint="@color/dodger_blue"
            android:gravity="center"
            android:text="@string/login"
            android:paddingLeft="20dp"
            android:paddingRight="20dp"
            android:textColor="@color/white"
            android:textSize="20sp" />


</LinearLayout>